added more of a wave

--- a/wave.htm
+++ b/wave.htm
@@ -8,7 +8,7 @@
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/paper.js"></script> 
-<script type="text/javascript" src="js/wave.js"></script>
+<script type="text/javascript" src="js/wave-move.js"></script>
 
 
 </head>
