--- a/wave.htm
+++ b/wave.htm
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+<div id="content"></div>
+	
 <div id="canvas-container"><canvas id="playground" resize="true"></canvas></div>
 
 
